// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense list with expenses 1`] = `
<div
  className="content_container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <Expense
      amount={1500}
      createdAt={1000}
      description="Water Bill"
      id="1"
      key="0"
      note=""
    />
    <Expense
      amount={20000}
      createdAt={2000}
      description="Electric bill"
      id="2"
      key="1"
      note=""
    />
    <Expense
      amount={3000}
      createdAt={3000}
      description="Telephone"
      id="3"
      key="2"
      note=""
    />
  </div>
</div>
`;

exports[`should render expense list with no expeses 1`] = `
<div
  className="content_container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;
